Add register sale initial flow
Changes to simplify register sale flow

Deduct stock quantity when register sale

Flow when buying items with reference unit

Refactor test classes