@@ -1,5 +1,6 @@
 package com.mapiz.mystore.integration.stock;
 
+import static com.mapiz.mystore.integration.Constants.*;
 import static org.mockito.Mockito.when;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.content;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
@@ -9,7 +10,6 @@ import com.mapiz.mystore.stock.application.dto.StockItemSummary;
 import com.mapiz.mystore.stock.infrastructure.EndpointConstant;
 import com.mapiz.mystore.stock.infrastructure.persistence.repository.JpaStockItemRepository;
 import java.math.BigDecimal;
-import java.util.Collections;
 import java.util.List;
 import org.junit.jupiter.api.Test;
 import org.springframework.boot.test.mock.mockito.SpyBean;
@@ -24,13 +24,20 @@ class GetStockProductsIntegrationTest extends BaseIntegrationTest {
   void testGetStockProducts() throws Exception {
     // Arrange
     var expectedResponse =
-        Collections.singletonList(
+        List.of(
             StockItemSummary.builder()
-                .productId(1)
-                .productName("Huevos")
-                .quantity(BigDecimal.valueOf(4))
-                .salePrice(BigDecimal.ZERO)
-                .weightedCost(BigDecimal.valueOf(425))
+                .productId(EGG_ID)
+                .productName(EGG_NAME)
+                .quantity(BigDecimal.valueOf(UNITS_OF_EGGS_IN_STOCK))
+                .salePrice(BigDecimal.valueOf(500.0))
+                .weightedCost(BigDecimal.valueOf(400))
+                .build(),
+            StockItemSummary.builder()
+                .productId(SAUSAGE_ID)
+                .productName(SAUSAGE_NAME)
+                .quantity(BigDecimal.valueOf(UNITS_OF_SAUSAGES_IN_STOCK))
+                .salePrice(BigDecimal.valueOf(3000.0))
+                .weightedCost(BigDecimal.valueOf(2500.0))
                 .build());
 
     // Act & Assert
